# routes/api.php
@@ -11,5 +11,5 @@ Route::post('/login', [AuthController::class, 'login']);
 
 Route::middleware('auth:sanctum')->group(function () {
     Route::post('/logout', [AuthController::class, 'logout']);
-    Route::get('/user', [AuthController::class, 'getAuthUser']);
+    Route::get('/auth-user', [AuthController::class, 'getAuthUser']);
 });
